xargs was spliting the input in a very different way from everyone else, and was also a bit inconsistent: leading blanks, or any double blanks generated empty arguments, but a trailing blank did not.

PR:		bin/2630, bin/10914
Submitted by:	Arne Henrik Juul <arnej@imf.unit.no>